--- a/terraform/k3s-cluster-proxmox/credentials.auto.tfvars.example
+++ b/terraform/k3s-cluster-proxmox/credentials.auto.tfvars.example
@@ -1,4 +1,4 @@
-# Update the credentails and save this as credentials.auto.tfvars
+# Update the credentials and save this as credentials.auto.tfvars
 proxmox_api_url = "https://<proxmox_ip>:8006/api2/json"  # Your Proxmox IP Address
 proxmox_node = "<proxmox_nodename>"
 proxmox_api_token_id = ""  # API Token ID
